
[project]
name = "kuma-importer"
version = "0.1.0"
description = "Interactive CSV/TXT/manual importer for Uptime Kuma"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Andrew Bergman" }
]

dependencies = [
  "uptime-kuma-api2==2.1.0"
]

[project.scripts]
kuma-import = "kuma_importer:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
